modules/gdscript/tests/scripts/parser/errors/immutable_local_no_initial_assignment.gd
func test():
	let value: float
